# docs/swagger.json
@@ -9,7 +9,46 @@
     "host": "work.test.muxi-tech.xyz",
     "basePath": "/api/v1",
     "paths": {
-        "/auth/authorize/:id/:role": {
+        "/auth/administrator": {
+            "get": {
+                "description": "查看所有管理员",
+                "consumes": [
+                    "json/application"
+                ],
+                "produces": [
+                    "json/application"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Get Authority",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "获取email",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "2--管理员   4--超管",
+                        "name": "role",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.AdminResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/authorize/:email/:role": {
             "put": {
                 "description": "Modifying User Rights",
                 "consumes": [
@@ -31,17 +70,17 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "被修改用户的id",
-                        "name": "id",
-                        "in": "header",
+                        "name": "email",
+                        "in": "path",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "权限等级",
                         "name": "role",
-                        "in": "header",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -150,7 +189,7 @@
         },
         "/homework/comment": {
             "get": {
-                "description": "查看已发布帖子的评论内容",
+                "description": "查看已发布的评论",
                 "consumes": [
                     "json/application"
                 ],
@@ -193,27 +232,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{}}",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
+                            "$ref": "#/definitions/Response"
                         }
                     }
                 }
@@ -229,7 +250,7 @@
                 "tags": [
                     "homework"
                 ],
-                "summary": "comment on homework",
+                "summary": "Comment on Homework",
                 "parameters": [
                     {
                         "type": "string",
@@ -250,7 +271,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "成功"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -324,6 +348,58 @@
             }
         },
         "/homework/publish": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "homework"
+                ],
+                "summary": "Publish homework",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "content--作业内容 ; group_id--小组id   1-设计组 2-产品组 3-安卓组 4-前端组 5-后端组",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/homework.HomeworkRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"Code\":\"200\",\"Message\":\"Success\",\"Data\":nil}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errno.Errno"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errno.Errno"
+                        }
+                    }
+                }
+            }
+        },
+        "/homework/published": {
             "get": {
                 "description": "查看不同组别的作业",
                 "consumes": [
@@ -335,7 +411,7 @@
                 "tags": [
                     "homework"
                 ],
-                "summary": "Get Homework",
+                "summary": "Get Published Homework",
                 "parameters": [
                     {
                         "type": "string",
@@ -383,62 +459,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "homework"
-                ],
-                "summary": "Publish homework",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token 用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "content--作业内容 ; group_id--小组id   1-设计组 2-产品组 3-安卓组 4-前端组 5-后端组",
-                        "name": "object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/homework.HomeworkRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"Code\":\"200\",\"Message\":\"Success\",\"Data\":nil}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    }
-                }
             }
         },
         "/homework/review": {
@@ -464,22 +484,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "不同组别的作业，1-设计组 2-产品组 3-安卓组 4-前端组 5-",
+                        "description": "作业id",
                         "name": "id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "limit--偏移量指定开始返回记录之前要跳过的记录数 ",
-                        "name": "limit",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "page--限制指定要检索的记录数 ",
-                        "name": "page",
                         "in": "query",
                         "required": true
                     }
@@ -492,12 +498,6 @@
                             "items": {
                                 "$ref": "#/definitions/file.Homework"
                             }
-                        }
-                    },
-                    "500": {
-                        "description": "{\"msg\":\"Error occurred while getting url queries.\"}",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
                         }
                     }
                 }
@@ -665,9 +665,9 @@
                 "summary": "Get user_profile api",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "user_id",
-                        "name": "id",
+                        "type": "string",
+                        "description": "user_email",
+                        "name": "email",
                         "in": "path",
                         "required": true
                     }
@@ -769,6 +769,9 @@
                     "type": "integer"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "status": {
                     "type": "integer"
                 },
                 "title": {
@@ -925,6 +928,29 @@
                 },
                 "role": {
                     "type": "integer"
+                }
+            }
+        },
+        "user.AdminResponse": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "integer"
+                },
+                "student_id": {
+                    "type": "string"
                 }
             }
         },
